test/src/e2e_vm_tests/test_programs/should_fail/recursive_const_module_over_module_function/src/main.sw
library;

fn mod_fn() -> u8 {
    MOD_CONST
}

const MOD_CONST: u8 = mod_fn();